data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2541.wast
;; 2. **Branching with Direct Function Call:**    - **Test Description:** Implement a block where a direct function call (`call`) occurs after several conditional branches (`br_if`).    - **Constraint Checked:** Proper handling of context shifts and label indexing during branching and function call execution.    - **Relation to Improper Function Handling:** Verify that function calls execute correctly even after multiple context changes due to branches.

(assert_invalid
  (module
    (func $example (result i32)
      (block (result i32)
        (br_if 0 (i32.const 0))
        (br_if 0 (i32.const 1))
        (call 0)
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)